# Auto-Card-Generator

./: .gitignore  LICENSE.txt  PUBLISHING.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish_registry.yml
comfy_nodes/: __init__.py
comfy_nodes/card_creator_llm/: README.md  __init__.py  extra_nodes.py  local_video_nodes.py  nodes.py  templates.py
workflows/: card_creator_kling3_60s_auto_skip.json  card_creator_kling3_60s_auto_skip_clean.json  card_creator_kling3_60s_auto_skip_clean_compat.json  card_creator_kling3_60s_auto_skip_local_safe.json  card_creator_kling3_60s_auto_skip_local_safe_compat.json  card_creator_kling3_start_end_chain.json  card_creator_kling3_start_end_chain_clean.json  card_creator_kling3_start_end_chain_clean_compat.json  card_creator_kling3_start_end_chain_local_safe.json  card_creator_kling3_start_end_chain_local_safe_compat.json  card_creator_kling_gpt54_base.json
