[project]
name = "card-creator-llm-nodes"
description = "ComfyUI nodes for script-aware Kling prompt planning with GPT-5.4"
version = "0.1.3"
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/mircudx/Auto-Card-Generator"

[tool.comfy]
PublisherId = "mircudx"
DisplayName = "mircudx custom nodes"
